# pylops

./: .coveragerc  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  environment-dev-arm.yml  environment-dev-gpu.yml  environment-dev-intel-mkl.yml  environment-dev.yml  noxfile.py  pyproject.toml  requirements-dev-arm.txt  requirements-dev-gpu.txt  requirements-dev.txt  requirements-doc.txt
.github/workflows/: build-cupy.yaml  build-mkl.yaml  build-mkl1.yaml  build.yaml  buildcupy-exouser.yaml  buildcupy.yaml  buildcupy1.yaml  buildft.yaml  codacy-coverage-reporter.yaml  deploy.yaml  ruff.yaml
.pi/prompts/: optest.md
.pi/tools/: operator_coverage.sh
docs/source/: adding.rst  addingsolver.rst  changelog.rst  citing.rst  conf.py  contributing.rst  credits.rst  extensions.rst  faq.rst  gpu.rst  index.rst  installation.rst  papers.rst  roadmap.rst
docs/source/api/: index.rst  others.rst
examples/: README.txt  plot_bayeslinearregr.py  plot_convolve.py  plot_derivative.py  plot_nmo.py  plot_slopeest.py  plot_wavelet.py
pylops/: _torchoperator.py  config.py  jaxoperator.py  linearoperator.py  torchoperator.py
pylops/avo/: avo.py  poststack.py  prestack.py
pylops/basicoperators/: block.py  blockdiag.py  causalintegration.py  conj.py  diagonal.py  directionalderivative.py  firstderivative.py  flip.py  functionoperator.py  gradient.py  hstack.py  identity.py  imag.py  laplacian.py  matrixmult.py  memoizeoperator.py  pad.py  real.py  regression.py  restriction.py  roll.py  secondderivative.py  smoothing1d.py  smoothing2d.py  smoothingnd.py  spread.py  sum.py  symmetrize.py  tocupy.py  transpose.py  vstack.py  zero.py
pylops/medical/: ct.py  mri.py
pylops/optimization/: __init__.py  basesolver.py  basic.py  callback.py  cls_basic.py  cls_leastsquares.py  cls_sparsity.py  eigs.py  leastsquares.py  sparsity.py
pylops/signalprocessing/: _baseffts.py  _fourierradon2d_cuda.py  _fourierradon3d_cuda.py  _interp_utils.py  _nonstatconvolve2d_cuda.py  _nonstatconvolve3d_cuda.py  bilinear.py  chirpradon3d.py  convolve1d.py  convolve2d.py  convolvend.py  dct.py  dtcwt.py  dwt.py  fft.py  fft2d.py  fftnd.py  fourierradon2d.py  fourierradon3d.py  interp.py  interpspline.py  nonstatconvolve1d.py  nonstatconvolve2d.py  nonstatconvolve3d.py  patch2d.py  patch3d.py  pwd2d.py  radon2d.py  radon3d.py  seislet.py  shift.py  sliding1d.py  sliding2d.py  sliding3d.py
pylops/utils/: _internal.py  _pwd2d.py  _pwd2d_numba.py  backend.py  decorators.py  deps.py  describe.py  dottest.py  estimators.py  metrics.py  multiproc.py  seismicevents.py  signalprocessing.py  tapers.py  typing.py  utils.py  wavelets.py
pylops/waveeqprocessing/: blending.py  kirchhoff.py  lsm.py  marchenko.py  mdd.py  oneway.py  seismicinterpolation.py  twoway.py  wavedecomposition.py
pytests/: conftest.py  test_avo.py  test_basicoperators.py  test_blending.py  test_causalintegration.py  test_chirpradon.py  test_combine.py  test_convolve.py  test_dct.py  test_derivative.py  test_diagonal.py  test_dwts.py  test_eigs.py  test_estimators.py  test_ffts.py  test_fourierradon.py  test_fredholm.py  test_functionoperator.py  test_interpolation.py  test_interpolation_spline.py  test_jaxoperator.py  test_kirchhoff.py  test_kronecker.py  test_lsm.py  test_marchenko.py  test_memoizeoperator.py  test_metrics.py  test_mri.py  test_nonstatconvolve.py  test_oneway.py  test_pad.py  test_patching.py  test_poststack.py  test_prestack.py  test_pwd.py  test_pytensoroperator.py  test_radon.py  test_restriction.py  test_seislet.py  test_shift.py  (+9 more)
tutorials/: bayesian.py  ctscan.py  deblurring.py  linearoperator.py  torchop.py
